Improve advancement display builders